req log function added

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ SALT_INFO=10
 SUPER_ADMIN_EMAIL=superadmin@example.com
 SUPER_ADMIN_PASSWORD=superAdminPass@1234
 SUPER_ADMIN_NAME=Super Admin
+CRON_STATUS=true
