--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fastify": "^4.10.2",
     "fastify-plugin": "^4.4.0",
     "fluent-json-schema": "^4.0.0",
+    "moment": "^2.29.4",
     "node-cron": "^3.0.2"
   },
   "devDependencies": {
